# barberpole

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lfsconfig  CLAUDE.md  README.md  build.gradle.kts  clang-format.sh  settings.gradle.kts
audio/src/main/cpp/: AudioEngine.cpp  CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  log_util.h  wav_loader.cpp  wav_loader.h
myvulkan/src/main/cpp/: CMakeLists.txt  log.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  vulkan_context.cpp  vulkan_context.h  vulkan_context_jni.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_jni.cpp
myvulkan/src/main/cpp/core/: vulkan_buffer.cpp  vulkan_buffer.h
myvulkan/src/main/cpp/core/context/: vulkan_context.cpp  vulkan_context.h
myvulkan/src/main/cpp/core/context/device/: device.cpp  device.h
myvulkan/src/main/cpp/core/context/physical_device/: physical_device.cpp  physical_device.h
myvulkan/src/main/cpp/core/context/vulkan/: my_vulkan.cpp  my_vulkan.h
myvulkan/src/main/cpp/core/framebuffer/: frame_buffer.cpp  frame_buffer.h
myvulkan/src/main/cpp/core/memory/: vulkan_buffer.h
myvulkan/src/main/cpp/core/pipeline/: graphics_pipeline.cpp  graphics_pipeline.h  render_pass.h
myvulkan/src/main/cpp/core/pipeline/shader/: shader_module.cpp  shader_module.h
myvulkan/src/main/cpp/core/renderer/: kaleidoscope_renderer.cpp  kaleidoscope_renderer.h  vulkan_renderer.cpp  vulkan_renderer.h
myvulkan/src/main/cpp/core/renderpass/: render_pass.cpp  render_pass.h
myvulkan/src/main/cpp/core/surface/: surface.cpp  surface.h  swap_chain.cpp  swap_chain.h
myvulkan/src/main/cpp/core/utils/: vulkan_utils.cpp  vulkan_utils.h
myvulkan/src/main/cpp/mesh/: regular_polygon.hpp  vertex.hpp
myvulkan/src/main/cpp/platform/android/jni/: drawing_renderer_jni.cpp  vulkan_context_jni.cpp  vulkan_renderer_jni.cpp
myvulkan/src/main/cpp/util/: color_utils.hpp  log.h
myvulkan/src/main/cpp/vulkan/common/context/: physical_device.cpp  physical_device.h  vulkan_context.h
myvulkan/src/main/cpp/vulkan/common/descriptor/: descriptor.cpp  descriptor.hpp
myvulkan/src/main/cpp/vulkan/common/memory/: device_buffer.cpp  device_buffer.h  ubo_buffer.hpp  vulkan_buffer.cpp  vulkan_buffer.h
myvulkan/src/main/cpp/vulkan/common/mesh/: mesh_buffer.hpp  mesh_data.hpp  regular_polygon.hpp
myvulkan/src/main/cpp/vulkan/common/pipeline/: graphics_pipeline.h  render_pass.cpp
myvulkan/src/main/cpp/vulkan/common/renderer/: command_executor.cpp  command_executor.hpp  render_looper.hpp  render_strategy.hpp  renderer_interface.hpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkan_renderer.cpp
myvulkan/src/main/cpp/vulkan/common/surface/: swap_chain.h
myvulkan/src/main/cpp/vulkan/common/utils/: vulkan_utils.cpp  vulkan_utils.h
myvulkan/src/main/cpp/vulkan/core/: CMakeLists.txt  command_buffer_helper.hpp  engine.cpp  engine.hpp  frame_context.cpp  frame_context.hpp  render_looper.hpp  render_message.hpp  renderer.hpp  shader_helper.hpp  suraface_changed_message.hpp  surface_changed_message.hpp  surface_context.cpp  surface_context.hpp
myvulkan/src/main/cpp/vulkan/core/context/: CMakeLists.txt  device.cpp  physical_device.h  vulkan_context.cpp
myvulkan/src/main/cpp/vulkan/core/context/include/: device_helper.hpp  physical_device_helper.hpp  vulkan_context.h
myvulkan/src/main/cpp/vulkan/core/context/src/: device_helper.cpp  physical_device_helper.cpp  vulkan_context.cpp
myvulkan/src/main/cpp/vulkan/core/engine/: command_executor.cpp  command_executor.hpp  engine_config.hpp  render_looper.hpp  render_message.hpp  renderer_interface.hpp  vulkan_engine.cpp  vulkan_engine.hpp
myvulkan/src/main/cpp/vulkan/core/memory/: CMakeLists.txt  device_buffer.cpp  device_buffer.h  generic_buffer.hpp  mesh_buffer.hpp  storage_buffer.hpp  ubo_buffer.hpp
myvulkan/src/main/cpp/vulkan/core/memory/include/: index_buffer.hpp  instance_buffer.hpp  storage_buffer.hpp  uniform_buffer.hpp  vertex_buffer.hpp
myvulkan/src/main/cpp/vulkan/core/memory/src/: base_buffer.cpp  base_buffer.hpp
myvulkan/src/main/cpp/vulkan/core/mesh/: mesh_buffer.hpp
myvulkan/src/main/cpp/vulkan/core/pipeline/: pipeline_builder.cpp  pipeline_builder.hpp  render_pass.cpp
myvulkan/src/main/cpp/vulkan/core/pipeline/colorblend/: color_blend.hpp  color_blend_alpha.hpp  color_blend_opaque.hpp
myvulkan/src/main/cpp/vulkan/core/pipeline/rasterizer/: rasterizer.hpp
myvulkan/src/main/cpp/vulkan/core/renderpass/: render_pass.cpp  render_pass.hpp
myvulkan/src/main/cpp/vulkan/core/surface/: surface.cpp  surface.h
myvulkan/src/main/cpp/vulkan/core/swap_chain/: swap_chain.cpp  swap_chain.h  swap_chain.hpp
myvulkan/src/main/cpp/vulkan/core/texture/: texture.cpp  texture.hpp  texture_utils.hpp
myvulkan/src/main/cpp/vulkan/core/utils/: command_utils.hpp  view_bounds.hpp  vulkan_utils.cpp  vulkan_utils.h
myvulkan/src/main/cpp/vulkan/features/drawing/: CMakeLists.txt
myvulkan/src/main/cpp/vulkan/features/drawing/include/: brush_change_message.hpp  drawing_engine.hpp  drawing_renderer.hpp  touch_message.hpp
myvulkan/src/main/cpp/vulkan/features/drawing/src/: compute_buffer.hpp  compute_descriptor.hpp  compute_params.hpp  compute_pipeline.hpp  descriptor.hpp  drawing_engine.cpp  drawing_renderer.cpp  drawing_renderer.hpp  frame_context.hpp  graphic_descriptor.hpp  graphic_pipeline.cpp  graphic_pipeline.hpp  input_buffer.hpp  input_vertex.hpp  instance_buffer.hpp  mesh.hpp  pipeline_config.cpp  pipeline_config.hpp  renderer_constants.hpp  stroke.hpp  stroke_manager.hpp  ubo.hpp  ubo_data.hpp  vertex.hpp  vertex_buffer.hpp
myvulkan/src/main/cpp/vulkan/features/kaleidoscope/: CMakeLists.txt  kaleidoscope_descriptor.hpp  kaleidoscope_instance_buffer.hpp  kaleidoscope_mesh.hpp  kaleidoscope_mesh_manager.hpp  kaleidoscope_pipeline_config.cpp  kaleidoscope_pipeline_config.hpp  kaleidoscope_renderer.cpp  kaleidoscope_renderer.h  kaleidoscope_ubo.hpp  mirror_tile_grid.hpp
myvulkan/src/main/cpp/vulkan/features/kaleidoscope/include/: kaleidoscope_config.hpp  kaleidoscope_descriptor.hpp  kaleidoscope_engine.hpp  regular_polygon.hpp  (+11 more)
(+357 files in other folders)
